= Updated NGTLD: split Afilias int Afilias, Afilias-SRS, and PIR, and added bep_type for shared/dedicated beps to detect tlds etc.
= IDN object now detects extlang (eg zh-tw)
= LaunchPhase extension updated to support multiple launch extensions in create command (e.g. for DPML override)
= NGTLD DRD updates _has_bep_key and verify name rules updates
+ Neustar FEE extension

#### gTLDS
= Updated Neustar+Afilias_Verisign IDN units to accept the IDN object, or if not avail fall back to $rd->{language}
= Merged some afilias/neustar test files


0.96_06_tdw_02 2014-03-11 DEVELOPMENT RELEASE
!! Note, this is not an official release !!

See warning in 0.96_01: this version enables only EPP over TCP/TLS and IRIS DCHK over UDP,
other protocols (Whois,DAS,RRI,RRP) or transports *might* not work in this version, however EPP over HTTPS is working.

#### New gTLDS
+ Added NGTLD SuperDRD, once DRD to rule them [ngTLDs] all
+ UnitedTLD Finance extension : registrar_balance command for Donuts/UnitedTLD (Rightside)
+ RegBox (Nic.at) DRD from Michael Braunoeder
+ AfiliasSRS DRD + Extensions
#### ccTLDs
= Imported .NO changed from Net-DRI-0.96_05.no.1.0.1 (By Norid)
  - eg/epp_client_no.pl: added support for bulk operation by specifying a -I option which should point to a file with a list of domains
  - lib/Net/DRI/Protocol/EPP/Extensions/NO/Result.pm: When parse() is now also called for a 'session' (login sequence), $oname is undef, and we set it to $otype to remove a perl warning.
  - lib/Net/DRI/Protocol/EPP/Extensions/NO.pm: Activated secDNS extensions
  - eg/epp_client_no.pl: added support for secDNS parameters
  - t/633norid_epp.t: added secDNS tests
#### Other
= Can now send a DRI object (i.e. preconfigured) to Net::DRI::Shell->run({dri=>$dri});


0.96_06_tdw_01 2014-03-04 DEVELOPMENT RELEASE
!! Note, this is not an official release !!

See warning in 0.96_01: this version enables only EPP over TCP/TLS and IRIS DCHK over UDP,